--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
                 <li>Студент 2</li>
             </ul>
         </section>
+        <section id="skills">
+    <h2>Навыки команды</h2>
+    <div class="skills-grid">
+        <div class="skill">
+            <h3>HTML</h3>
+            <p>Создание семантической разметки</p>
+        </div>
+        <div class="skill">
+            <h3>CSS</h3>
+            <p>Стилизация и адаптивный дизайн</p>
+        </div>
+        <div class="skill">
+            <h3>Git</h3>
+            <p>Контроль версий и работу в команде</p>
+        </div>
+    </div>
+</section>
     </main>
     <footer>
         <p>&copy; 2024 Наша команда</p>
