--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </section>
         <section id="skills">
-    <h2>Навыки команды</h2>
+    <h2>Навыки команды:</h2>
     <div class="skills-grid">
         <div class="skill">
             <h3>HTML</h3>
@@ -41,7 +41,7 @@
 </section>
     </main>
     <footer>
-        <p>&copy; 2024 Наша команда</p>
+        <p>&copy; 2024 Наша команда!</p>
     </footer>
 </body>
 </html>
