--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <div class="skills-grid">
         <div class="skill">
             <h3>HTML</h3>
-            <p>Создание семантической разметки</p>
+            <p>Создание семантической разметки!</p>
         </div>
         <div class="skill">
             <h3>CSS</h3>
-            <p>Стилизация и адаптивный дизайн</p>
+            <p>Стилизация и адаптивный дизайн!</p>
         </div>
         <div class="skill">
             <h3>Git</h3>
-            <p>Контроль версий и работу в команде</p>
+            <p>Контроль версий и работу в команде!</p>
         </div>
     </div>
 </section>
