change name students in index

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <section id="team">
             <h2>Наша команда</h2>
             <ul>
-                <li>Студент 1</li>
-                <li>Студент 2</li>
+                <li>Мулюков Ринат</li>
+                <li>Климов Максим</li>
             </ul>
         </section>
         <section id="skills">
